<resources>
    <string name="app_name">QR Trans</string>
    <string name="start_scan">Start Scan</string>
    <string name="start_scan_text">Get files by QR code</string>
    <string name="nopermissions">No permissions</string>
    <string name="result_title">Result</string>
    <string name="send_files_text">Send files via generating QR code</string>
    <string name="setting_text">Adjust some parameters</string>
    <string name="title_activity_setting">Setting</string>
    <string name="large_text"></string>
    <string name="action_settings"></string>
    <string name="setting_about">About</string>
    <string name="request_permissions_text">Need your camera and storage permissions</string>
    <string name="request_permissions">Request Permissions</string>
    <string name="title_activity_send">Send Files</string>
    <string name="Select_title">Select a file</string>
    <string name="select_button">select</string>
    <string name="each_code_size_title">The size of the content contained in each QR code</string>
    <string name="each_code_time">The displayed time of each QR code</string>
    <string name="estimated_time_title">Estimated time</string>
    <string name="no_file_selected">No file selected</string>
</resources>
